--- a/src/styles/layouts/_layouts.scss
+++ b/src/styles/layouts/_layouts.scss
@@ -6,7 +6,7 @@
     }
 
     main.main {
-        @apply flex flex-col max-w-screen-xl mx-auto h-screen py-20;
+        @apply flex flex-col w-full h-screen p-20;
     }
 
     footer.footer {
