--- a/src/styles/layouts/_menuOverlay.scss
+++ b/src/styles/layouts/_menuOverlay.scss
@@ -1,5 +1,5 @@
 .nav-li {
-    @apply flex w-full leading-8 list-none focus:outline-none py-2 tracking-normal opacity-50 hover:opacity-100 transition-all duration-200 ease-in-out;
+    @apply flex w-full leading-8 list-none focus:outline-none py-2 tracking-normal font-semibold opacity-50 hover:opacity-100 transition-all duration-200 ease-in-out;
 }
 
 .nav-link {
