--- a/src/styles/layouts/_layouts.scss
+++ b/src/styles/layouts/_layouts.scss
@@ -1,5 +1,5 @@
 #layout-default {
-    @apply relative flex flex-col w-screen h-auto min-h-screen bg-primary-500 text-white;
+    @apply relative flex flex-col w-screen h-auto min-h-screen bg-black text-white;
     overflow-x: hidden;
 
     header.header {
@@ -7,10 +7,10 @@
     }
 
     main.main {
-        @apply flex flex-col w-full h-screen p-20;
+        @apply flex flex-col w-full h-full p-20;
     }
 
     footer.footer {
-        @apply flex justify-center items-center w-full bg-slate-900 py-8;
+        @apply flex justify-center items-center w-full py-8;
     }
 }
