--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,6 @@
 @import 'layouts/layouts';
 @import 'layouts/menuOverlay';
 @import 'utilities';
+@import 'layouts/headerNew';
+@import 'parts/portofolio.scss';
+@import 'parts/experience.scss';
